<resources>
    <string name="app_name">雲科生物辨識</string>
    <string name="information">資訊</string>
    <string name="map">地圖</string>
    <string name="history">歷史紀錄</string>
    <string name="home">首頁</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_camera">打開相機</string>
    <string name="upload_web">上傳伺服</string>
    <string name="open_gallery">打開相簿</string>
    <string name="sort_select">排序 ▼</string>
    <string name="search_select">搜尋 ▼</string>
    <string name="web_version">前往WEB</string>
    <string name="loading">loading…</string>
    <string name="message">訊息</string>
    <string name="Cancel">取消</string>
    <string name="Confirm">確定</string>
    <string name="time">時間</string>
    <string name="variety">品種</string>
    <string name="content">內容</string>
    <string name="date_">日期：</string>
    <string name="variety_">物種：</string>
    <string name="click_info_detail">點選查看詳細資料…</string>
    <string name="_Location">所在位置</string>
    <string name="refresh">刷新</string>
    <string name="web_server">WEB伺服器</string>
    <string name="url">URL</string>
    <string name="search">搜尋</string>
    <string name="please_input_name">請輸入種類</string>
    <string name="sort">排序</string>
    <string name="recent">最近時間</string>
    <string name="latest">最晚時間</string>
    <string name="type">種類</string>
    <string name="sort_method">排序方式：</string>
    <string name="web_check">確認WEB是否連線</string>
</resources>