<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bounding2"
        android:padding="6dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/bounding">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/img_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                android:padding="5dp"
                app:srcCompat="@drawable/icon_yuntech"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="5dp"
                android:text="@string/variety_" />

            <TextView
                android:id="@+id/tv_variety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:padding="5dp"
                android:text="@string/variety" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="5dp"
                android:text="@string/date_"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:padding="5dp"
                android:text="@string/time" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>