<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bounding"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_msg"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignEnd="@+id/tv_msg"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:drawable/ic_delete"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_negative"
            android:text="@string/Cancel"
            android:background="@drawable/corner_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_positive"
            android:text="@string/Confirm"
            android:background="@drawable/corner_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>