<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yuntech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/img_yuntech"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/history" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#00000000"
            android:layout_marginEnd="12dp"
            android:drawableEnd="@android:drawable/stat_notify_sync"
            android:text="@string/refresh"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_tool"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2"
            android:padding="10dp">

            <Button
                android:id="@+id/tv_sort"
                android:background="@drawable/corner_btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/sort_select"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/tv_serach"
                android:background="@drawable/corner_btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/search_select" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="right"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/sort_method"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_tool">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyceler_history"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/not_found"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/img_not_found"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>