<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bounding"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/search"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/bounding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:src="?android:attr/actionModeWebSearchDrawable"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/search_bar2"
                android:hint="@string/please_input_name"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="#AAAAAA"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <ImageButton
                android:id="@+id/img_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="#00000000"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_negative"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/corner_btn"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btn_positive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/corner_btn"
            android:text="@string/Confirm"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

</LinearLayout>