<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yuntech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/img_yuntech"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/home" />


        <ImageView
            android:id="@+id/btn_check"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginEnd="15dp"
            android:background="@drawable/img_off"
            tools:ignore="ContentDescription,RtlHardcoded" />


    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/bounding"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_yuntech" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/corner_btn"
            android:drawableTop="@drawable/img_camera"
            android:text="@string/open_camera"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/corner_btn"
            android:drawableTop="@drawable/img_web"
            android:text="@string/upload_web"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/corner_btn"
            android:drawableTop="@drawable/img_gallery"
            android:text="@string/open_gallery"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bounding2"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>